<resources>
    <string name="app_name">TestProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_manager">Password Manager</string>
    <string name="you_can_save_your_password_here">You can save your password here</string>
    <string name="enter_password_key_here">Enter Password Key Here</string>
    <string name="enter_password_value_here">Enter Password Value Here</string>
    <string name="enter_password_desc_here">Enter Password Desc Here</string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
    <string name="show_all">SHOW ALL</string>
    <string name="delete">DELETE</string>
    <string name="android_services">Android Services</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="permission_handler">Permission Handler</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="camera_permission_granted">Camera Permission Granted</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="external_storage_permission">External Storage Permission</string>
    <string name="storage_permission">External storage permission granted</string>
    <string name="storage_permission_denied">External storage permission denied</string>
    <string name="gallery_permission">No permission required to access images</string>
    <string name="launch_notification">Launch Notification</string>
    <string name="content_provider">Content Provider</string>
    <string name="get_contact_list">Get Contact List</string>
    <string name="start_location_service">Start Location Service</string>
    <string name="stop_location_service">Stop Location Service</string>
    <string name="navigate_to_other_activity">Navigate to Other Activity</string>
    <string name="navigate_to_ui_section">Navigate to UI section</string>
    <string name="navigate_to_app_samples">Navigate to App Samples</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="drawer_layout">Drawer Layout</string>
    <string name="tab_bar">Tab Layout with ViewPager</string>
    <string name="bottomSheet">Bottom Sheet Behaviour</string>
</resources>