<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.profile.ProfileFragment">

        <TextView
            android:id="@+id/password_manager_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/password_manager"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/pass_manager_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/you_can_save_your_password_here"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_password_key_here"
            android:maxEms="20"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_password_value_here"
            android:maxEms="20"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_password_desc_here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/show_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pass_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</layout>